--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,18 +1,17 @@
-cmake_minimum_required(VERSION 3.18.2)
-project(graph-tests)
+set(TESTS
+  bipartite-graph.cpp
+)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+add_executable(${TEST_SUITE} ${TESTS})
 
 enable_testing()
 
-add_executable(${PROJECT_NAME} main.cpp Bipartite-test.cpp)
-
-add_subdirectory(../extern/googletest)
-
 target_include_directories(${PROJECT_NAME}
-  PUBLIC extern/googletest/googletest/include
+  PUBLIC ${PROJECT_SOURCE_DIR}/extern/googletest/googletest/include
 )
 
-target_link_libraries(${PROJECT_NAME} gtest)
+#target_link_libraries(${PROJECT_NAME} PUBLIC gtest)
