Fix linking libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(GraphAlgorithms)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 add_executable(${PROJECT_NAME} main.cpp)
 
 # enable testing
@@ -16,10 +17,11 @@ add_subdirectory(extern/googletest)
 add_subdirectory(tests)
 add_subdirectory(src)
 
-include_directories(src)
-
 target_include_directories(${PROJECT_NAME}
   PUBLIC extern/googletest/googletest/include
   PUBLIC extern/googletest/googlemock/include
 )
 
+target_link_libraries(${PROJECT_NAME}
+  PRIVATE gtest
+)
